# trance

./: .gitignore  CMakeLists.txt
cmake.d/: FindVpxLibrary.cmake  FindWebMLibrary.cmake
src/common/: common.h  session.cpp
src/common/media/: image.cpp  streamer.cpp  streamer.h
src/creator/: export.cpp  item_list.h  launch.cpp  main.cpp  playlist.cpp  program.cpp  theme.cpp  variables.cpp
